8256823: C2 compilation fails with "assert(isShiftCount(imm8 >> 1)) failed: illegal shift count"