src/hotspot/cpu/x86/assembler_x86.cpp
@@ -4905,7 +4905,7 @@ void Assembler::ret(int imm16) {
 }
 
 void Assembler::roll(Register dst, int imm8) {
-  assert(isShiftCount(imm8 >> 1), "illegal shift count");
+  assert(isShiftCount(imm8), "illegal shift count");
   int encode = prefix_and_encode(dst->encoding());
   if (imm8 == 1) {
     emit_int16((unsigned char)0xD1, (0xC0 | encode));
@@ -4920,7 +4920,7 @@ void Assembler::roll(Register dst) {
 }
 
 void Assembler::rorl(Register dst, int imm8) {
-  assert(isShiftCount(imm8 >> 1), "illegal shift count");
+  assert(isShiftCount(imm8), "illegal shift count");
   int encode = prefix_and_encode(dst->encoding());
   if (imm8 == 1) {
     emit_int16((unsigned char)0xD1, (0xC8 | encode));
